lager-lang/examples/good/var_overwrite.lg
int main() {
    int x = 4;
    string x = "abc";
    print(x); // abc
    
    return 0;
}
