lager-lang/examples/bad/compare-strings.lg
int main() {
    print("abc" <= "abcd"); // compile error
    
    return 0;
}
